--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "node",
   "version": "1.0.0",
   "main": "script.js",
-  "scripts": {
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "description": ""
 }
