--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "node",
   "version": "1.0.0",
   "main": "script.js",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
