--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/server.js",
 
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "start:dev": "nodemon src/server.js",
     "eslint": "npx eslint --ext .js src/**"
   },
 
